--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,12 @@
     "ethers": "^5.7.2",
     "google-maps-react": "^2.0.2",
     "html-react-parser": "^0.10.1",
-    "ipfs-http-client": "^33.0.1",
     "owl.carousel": "^2.3.4",
     "react": "^16.12.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0",
+    "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "wowjs": "^1.1.3"
   },
