--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,24 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^1.1.3",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "google-maps-react": "^2.0.2",
     "html-react-parser": "^0.10.1",
-    "ipfs-http-client": "^33.0.1",
+    "os-browserify": "^0.3.0",
     "owl.carousel": "^2.3.4",
+    "path-browserify": "^1.0.1",
     "react": "^16.12.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0",
+    "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "wowjs": "^1.1.3"
   },
   "scripts": {
